# notifications_service/docs/swagger.json
@@ -423,7 +423,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Placeholder endpoint to retrieve a user's notification email for the authenticated client.",
+                "description": "Retrieves a user's notification email for the authenticated client.",
                 "produces": [
                     "application/json"
                 ],
@@ -441,6 +441,13 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -448,8 +455,8 @@
                             "additionalProperties": true
                         }
                     },
-                    "501": {
-                        "description": "Not Implemented",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -463,7 +470,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Placeholder endpoint to create/update a user's notification email for the authenticated client.",
+                "description": "Creates or updates a user's notification email for the authenticated client.",
                 "consumes": [
                     "application/json"
                 ],
@@ -493,6 +500,13 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -507,8 +521,8 @@
                             "additionalProperties": true
                         }
                     },
-                    "501": {
-                        "description": "Not Implemented",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -522,7 +536,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Placeholder endpoint to delete a user's notification email for the authenticated client.",
+                "description": "Deletes a user's notification email for the authenticated client.",
                 "produces": [
                     "application/json"
                 ],
@@ -540,6 +554,13 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -547,8 +568,8 @@
                             "additionalProperties": true
                         }
                     },
-                    "501": {
-                        "description": "Not Implemented",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -572,6 +593,9 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "notifications_email": {
                     "type": "string"
                 },
                 "vapid_public_key": {
@@ -611,13 +635,32 @@
             "type": "object",
             "required": [
                 "admin_email",
-                "name"
+                "name",
+                "notifications_email"
             ],
             "properties": {
                 "admin_email": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "notifications_email": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_handlers.EmailConfig": {
+            "type": "object",
+            "required": [
+                "template_id"
+            ],
+            "properties": {
+                "dynamic_data": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "template_id": {
                     "type": "string"
                 }
             }
@@ -644,6 +687,14 @@
                         "auto",
                         "ltr",
                         "rtl"
+                    ]
+                },
+                "email": {
+                    "description": "Added for Omnichannel Routing",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/internal_handlers.EmailConfig"
+                        }
                     ]
                 },
                 "icon": {
